Do not enable preview.